--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -14,8 +14,8 @@
   :font-size 1.4em
   :line-height 1.5em
   
-=bell_gothic
-  :font-family "Bell Gothic Std", "Lucida Grande", arial, sans-serif
+=comenia
+  :font-family "comenia-sans-web-1","comenia-sans-web-2", arial, sans-serif
   
 =big_white_heading
   :font-size 1.8em
@@ -56,7 +56,7 @@ html
   
 body
   :font-size 62.5%
-  +bell_gothic
+  +comenia
   :color = !standard_text
   :background transparent url(/images/background-glow.png) no-repeat center top
   :min-height 538px
@@ -312,7 +312,7 @@ body.archive p.page-desc
     
     
     h2, h3
-      +bell_gothic
+      +comenia
       :word-spacing 0.2em
       :width = !article_width
       :line-height 1.5em
@@ -400,7 +400,7 @@ body.archive p.page-desc
 
     #archived-comments
       h1
-        +bell_gothic
+        +comenia
       pre
         :font-size 1.2em
       li
